--- a/MenschApp/res/layout/activity_lobby.xml
+++ b/MenschApp/res/layout/activity_lobby.xml
@@ -22,10 +22,19 @@
         android:id="@+id/highscore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/button1"
-        android:layout_alignBottom="@+id/button1"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="17dp"
+        android:layout_alignBaseline="@+id/settings"
+        android:layout_alignBottom="@+id/settings"
+        android:layout_marginLeft="27dp"
+        android:layout_toRightOf="@+id/settings"
         android:text="@string/highscore" />
+
+    <ListView
+        android:id="@+id/listView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/settings"
+        android:layout_below="@+id/settings"
+        android:layout_marginTop="29dp" >
+    </ListView>
 
 </RelativeLayout>
