--- a/MenschApp/res/layout/activity_game_detail.xml
+++ b/MenschApp/res/layout/activity_game_detail.xml
@@ -9,8 +9,51 @@
     tools:context=".GameDetailActivity" >
 
     <TextView
+        android:id="@+id/TextView02"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_below="@+id/textView1"
+        android:layout_marginLeft="87dp"
+        android:layout_marginTop="30dp"
+        android:layout_toRightOf="@+id/textView1"
+        android:text="@string/zuschauer" />
+
+    <ListView
+        android:id="@+id/listView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/TextView02"
+        android:layout_alignRight="@+id/TextView02"
+        android:layout_below="@+id/TextView02" >
+
+    </ListView>
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="15dp"
+        android:text="@string/spielleiter" />
+
+    <TextView
+        android:id="@+id/TextView01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/TextView02"
+        android:layout_alignBottom="@+id/TextView02"
+        android:layout_alignLeft="@+id/textView1"
+        android:text="@string/spieler" />
+
+    <TextView
+        android:id="@+id/TextView03"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/TextView02"
+        android:layout_alignLeft="@+id/TextView02"
+        android:editable="false"
+        android:text="" />
 
 </RelativeLayout>
