--- a/MenschApp/res/layout/activity_lobby.xml
+++ b/MenschApp/res/layout/activity_lobby.xml
@@ -9,31 +9,21 @@
     tools:context=".LobbyActivity" >
 
     <Button
-        android:id="@+id/settings"
+        android:id="@+id/highscore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="14dp"
         android:layout_marginTop="14dp"
-        android:text="@string/settings" />
-
-    <Button
-        android:id="@+id/highscore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/settings"
-        android:layout_alignBottom="@+id/settings"
-        android:layout_marginLeft="27dp"
-        android:layout_toRightOf="@+id/settings"
         android:text="@string/highscore" />
 
     <ListView
         android:id="@+id/lobbylist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/settings"
-        android:layout_below="@+id/settings"
+        android:layout_alignLeft="@+id/highscore"
+        android:layout_below="@+id/highscore"
         android:layout_marginTop="29dp"
         android:clickable="true" >
 
