--- a/MenschApp/res/layout/activity_game_detail.xml
+++ b/MenschApp/res/layout/activity_game_detail.xml
@@ -79,4 +79,22 @@
         android:layout_below="@+id/spieler3"
         android:text="@string/spieler4" />
 
+    <Button
+        android:id="@+id/mitspielen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/spieler4"
+        android:layout_below="@+id/spieler4"
+        android:layout_marginTop="38dp"
+        android:text="@string/mitspielen" />
+
+    <Button
+        android:id="@+id/zuschauen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/mitspielen"
+        android:layout_below="@+id/mitspielen"
+        android:layout_marginTop="16dp"
+        android:text="@string/zuschauen" />
+
 </RelativeLayout>
