added new server methods

--- a/MenschApp/res/values/strings_activity_lobby.xml
+++ b/MenschApp/res/values/strings_activity_lobby.xml
@@ -4,4 +4,5 @@
 	<string name="mitspielen">mitspielen</string>
 	<string name="highscore">Rangliste</string>	
 	<string name="lobby_progress_gamelist">Hole Spiele...</string>
+	<string name="start">Starten</string>
 </resources>
