--- a/MenschApp/res/layout/activity_game_detail.xml
+++ b/MenschApp/res/layout/activity_game_detail.xml
@@ -97,4 +97,13 @@
         android:layout_marginTop="16dp"
         android:text="@string/zuschauen" />
 
+    <Button
+        android:id="@+id/start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/zuschauen"
+        android:layout_below="@+id/zuschauen"
+        android:layout_marginTop="21dp"
+        android:text="Button" />
+
 </RelativeLayout>
