--- a/MenschApp/res/layout/activity_game_field.xml
+++ b/MenschApp/res/layout/activity_game_field.xml
@@ -756,7 +756,7 @@
 		    android:paddingRight="0dp" >
 
 		    <Button
-		        android:id="@+id/button1"
+		        android:id="@+id/start"
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
 		        android:text="@string/wuerfeln" />
@@ -766,7 +766,7 @@
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
 		        android:layout_alignParentLeft="true"
-		        android:layout_below="@+id/button1"
+		        android:layout_below="@+id/start"
 		        android:text="Würfelergebnis" />
 
 		    <TextView
