--- a/MenschApp/res/layout/activity_game_detail.xml
+++ b/MenschApp/res/layout/activity_game_detail.xml
@@ -87,6 +87,7 @@
         android:layout_alignLeft="@+id/spieler4"
         android:layout_below="@+id/spieler4"
         android:layout_marginTop="38dp"
+        android:background="@drawable/custom_button_game_detail"
         android:text="@string/mitspielen" />
 
     <Button
@@ -96,6 +97,7 @@
         android:layout_alignLeft="@+id/mitspielen"
         android:layout_below="@+id/mitspielen"
         android:layout_marginTop="16dp"
+        android:background="@drawable/custom_button_game_detail"
         android:text="@string/zuschauen" />
 
     <Button
@@ -105,6 +107,7 @@
         android:layout_alignLeft="@+id/zuschauen"
         android:layout_below="@+id/zuschauen"
         android:layout_marginTop="21dp"
+        android:background="@drawable/custom_button_game_detail"
         android:text="Button" />
 
 </RelativeLayout>
