--- a/MenschApp/res/values/strings_activity_gamedetails.xml
+++ b/MenschApp/res/values/strings_activity_gamedetails.xml
@@ -8,5 +8,6 @@
     <string name="spieler2">Nicht besetzt</string>
     <string name="spieler3">Nicht besetzt</string>
     <string name="spieler4">Nicht besetzt</string>
+    <string name="startknopf">Starten</string>
 
 </resources>
