--- a/MenschApp/res/layout/activity_game_detail.xml
+++ b/MenschApp/res/layout/activity_game_detail.xml
@@ -101,13 +101,13 @@
         android:text="@string/zuschauen" />
 
     <Button
-        android:id="@+id/start"
+        android:id="@+id/startknopf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/zuschauen"
         android:layout_below="@+id/zuschauen"
         android:layout_marginTop="21dp"
         android:background="@drawable/custom_button_game_detail"
-        android:text="Button" />
+        android:text="@string/startknopf" />
 
 </RelativeLayout>
