--- a/MenschApp/res/values/strings_activity_login.xml
+++ b/MenschApp/res/values/strings_activity_login.xml
@@ -3,7 +3,7 @@
     <string name="title_activity_login">Einloggen</string>
 
     <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
+    <string name="prompt_email">Benutzername</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in_register"><b>Einloggen</b></string>
     <string name="action_register"><b>Registrieren</b></string>
