--- a/HighscoreServer/.settings/org.eclipse.wst.common.component
+++ b/HighscoreServer/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="HighscoreServer">
         <wb-resource deploy-path="/" source-path="/ejbModule" tag="defaultRootSource"/>
+        <dependent-module archiveName="HighscorePersistenceManagement.jar" deploy-path="/" handle="module:/resource/HighscorePersistenceManagement/HighscorePersistenceManagement">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="java-output-path" value="/HighscoreServer/build/classes"/>
         <property name="ClientProject" value="HighscoreServerClient"/>
         <property name="ClientJARURI" value="HighscoreServerClient.jar"/>
